templates: Add template to display favicon and logo in footer.
If in pelicanconf.py dict FAVICON_LOGO_LICENCE is filled then
display in footer info about favicon and logo license.

--- a/templates/base.html
+++ b/templates/base.html
@@ -173,6 +173,9 @@
       {% else %}
         {% include "partial/copyright.html" %}
       {% endif %}
+      {% if FAVICON_LOGO_LICENCE %}
+        {% include "partial/favicon_logo.html" %}
+      {% endif %}
     </footer>
   </main>
 
