templates: Add option to display number of comments from Disqus.
If pelicanconf.py contains DISQUS_COMMENTS_COUNT set to True
display on index page number of comments for given article from Disqus.

--- a/templates/base.html
+++ b/templates/base.html
@@ -198,5 +198,8 @@
   {% if GITHUB_CORNER_URL %}
   {% include 'partial/github.html' %}
   {% endif %}
+  {% if DISQUS_COMMENTS_COUNT %}
+    <script id="dsq-count-scr" src="//testing-linux-git-stuff.disqus.com/count.js" async></script>
+  {% endif %}
 </body>
 </html>
