--- a/templates/partial/favicon_logo.html
+++ b/templates/partial/favicon_logo.html
@@ -1,5 +1,7 @@
 <p>
-  <a href="{{ FAVICON_LOGO_LICENCE["favicon_url"] }}">Favicon</a> and
-  <a href="{{ FAVICON_LOGO_LICENCE["logo_url"] }}">logo</a> pictures by {{ FAVICON_LOGO_LICENCE["author"] }}
-    licensed under <a href="{{ FAVICON_LOGO_LICENCE["license_url"] }}">{{ FAVICON_LOGO_LICENCE["license_name"] }}</a>
+    {{ _('%(favicon)s and %(logo)s pictures by %(author)s licensed under %(licence)s',
+    favicon='<a href="%s">Favicon</a>'|format(FAVICON_LOGO_LICENCE.favicon_url),
+    logo='<a href="%s">logo</a>'|format(FAVICON_LOGO_LICENCE.logo_url),
+    author='%s'|format(FAVICON_LOGO_LICENCE.author),
+    licence='<a href="%s">%s</a>'|format(FAVICON_LOGO_LICENCE.license_url,FAVICON_LOGO_LICENCE.license_name)) }}
 </p>
